# financial-analysis-mcp

./: LICENSE  README.md  finmcp_rest.py  llms-install.md  mcp-config.json  mcpize.yaml  pyproject.toml  requirements.txt  server.py
src/: coze_adapter.py
src/fin_analysis_mcp/: __init__.py  __main__.py  analyzers.py  neodata_client.py  server.py
